RESOLVED FIXED92487
CSP directives containing invalid characters should log an error
https://bugs.webkit.org/show_bug.cgi?id=92487
Summary CSP directives containing invalid characters should log an error
Mike West
Reported 2012-07-27 04:16:29 PDT
`X-WebKit-CSP: script-src: 'unsafe-inline';` should log an error to the console, as the invalid `:` means the directive is ignored.
Attachments
Patch (5.45 KB, patch)
2012-07-27 04:38 PDT, Mike West
no flags
Mike West
Comment 1 2012-07-27 04:33:01 PDT
Clarifying the title of the bug, uploading a patch in a moment.
Mike West
Comment 2 2012-07-27 04:38:58 PDT
Mike West
Comment 3 2012-07-27 04:46:16 PDT
Adam, can you take a look at this when you get a chance? Low priority, just an edge case in which a lack of logging confused me briefly.
WebKit Review Bot
Comment 4 2012-07-27 11:38:41 PDT
Comment on attachment 154906 [details] Patch Clearing flags on attachment: 154906 Committed r123899: <http://trac.webkit.org/changeset/123899>
WebKit Review Bot
Comment 5 2012-07-27 11:38:44 PDT
All reviewed patches have been landed. Closing bug.
Mike West
Comment 6 2012-07-27 11:57:05 PDT
Thanks for throwing this in the CQ, Adam. I appreciate it. :)
Note You need to log in before you can comment on or make changes to this bug.