CSP directives containing invalid characters should log an error. https://bugs.webkit.org/show_bug.cgi?id=92487

Patch by Mike West <mkwst@chromium.org> on 2012-07-27
Reviewed by Adam Barth.

Source/WebCore:

Unknown directive names are currently logged, but we exit the directive
parser early without logging if we hit an invalid character inside a
directive. `script-src: ...`, for example, was ignored without letting
the developer know what happened. This patch changes that behavior,
logging the whole name (in this case `script-src:`) as an unknown
directive.

Test: http/tests/security/contentSecurityPolicy/directive-parsing-04.html

* page/ContentSecurityPolicy.cpp:
(WebCore::CSPDirectiveList::parseDirective):

LayoutTests:

* http/tests/security/contentSecurityPolicy/directive-parsing-03-expected.txt: Added.
* http/tests/security/contentSecurityPolicy/directive-parsing-04-expected.txt: Added.
* http/tests/security/contentSecurityPolicy/directive-parsing-04.html: Added.
    Adding a test specifically for `script-src: ...` which bit me, and
    updating test #3, which now has a better error message.

Canonical link: https://commits.webkit.org/110334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123899 268f45cc-cd09-0410-ab3c-d52691b4dbfc